switch to using hubspot form

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -122,7 +122,7 @@
   <div class="buy-sell-block d-flex flex-column justify-content-between align-items-center px-3 px-md-0">
     <h1>{{gettext("Where top creators launch their NFTs")}}</h1>
     <div class="segment-subtitle mx-3">{{gettext("Origin has hosted record-breaking NFT sales for top musicans, celebrities and creators. Sell NFTs on your own website, not someone else's marketplace.")}}</div>
-    <a class="mb-5 mt-5 btn btn-dark d-flex justify-content-center align-items-center" href="https://docs.google.com/forms/d/e/1FAIpQLSf1ArOFye1PWZshoQI5a3TJWIYShC89G6-R8mPgAt92dSiJ9w/viewform">
+    <a class="mb-5 mt-5 btn btn-dark d-flex justify-content-center align-items-center" href="https://share.hsforms.com/1y9oMr3DSRg-QSnfPoaYY0Qbye5b">
       {{gettext("Interested in running an NFT sale?")}}</a>
 
       <div class="container mb-6 nft-pitch">
