--- a/templates/product.html
+++ b/templates/product.html
@@ -80,7 +80,7 @@
 
     <div class="d-flex">
       <a
-        href="https://docs.google.com/forms/d/e/1FAIpQLSf1ArOFye1PWZshoQI5a3TJWIYShC89G6-R8mPgAt92dSiJ9w/viewform"
+        href="https://share.hsforms.com/1y9oMr3DSRg-QSnfPoaYY0Qbye5b"
         class="btn btn-primary d-flex align-items-center justify-content-center mr-2 p-3 mt-5 mb-5">
         {{gettext("Interested in running an NFT sale?")}}
       </a>
