--- a/templates/team.html
+++ b/templates/team.html
@@ -634,6 +634,19 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
             {{ gettext("3LAU") }}
           </div>
         </div>
+        <div class="team-member">
+          <div class="headshot-wrapper">
+            <img src="/static/img/headshot-paris.png" class="headshot" alt="Paris Hilton headshot" />
+          </div>
+          <div class="name">
+            <a href="https://twitter.com/parishilton" target="_blank"
+              rel="noopener noreferrer">{{ gettext("Paris Hilton") }}
+            </a>
+          </div>
+          <div class="title">
+            {{ gettext("Paris Hilton") }}
+          </div>
+        </div>
       </div>
     </div>
   </section>
