Update Brave logo

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -55,10 +55,9 @@
     <div class="container mb-5">
       <div class="drops-section row justify-content-center">
 
-        
         <div class="col-12 col-sm-6 col-md-2 drop text-center">
           <a target="_blank" rel="noopener noreferrer" href="https://tabong.brave.com/">
-            <img src="https://partner-assets-prod.ogn.app/brave/lg/brave-logo-color-rgb-reversed-3-x.3b6938ea.png" style="-webkit-filter: invert(100%) grayscale(100%)"/>
+            <img src="https://partner-assets-prod.ogn.app/brave/lg/Brave-logo-monotone.png" />
           </a>
         </div>
         <div class="col-12 col-sm-6 col-md-2 drop text-center">
