use whitelabeled medium

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -60,7 +60,7 @@
           <a href="https://twitter.com/originprotocol" target="_blank" rel="noopener noreferrer" data-toggle="tooltip" title="{{ gettext("Twitter") }}" data-placement="top">
             <i class="fab fa-twitter"></i>
           </a>
-          <a href="https://medium.com/originprotocol" target="_blank" rel="noopener noreferrer" data-toggle="tooltip" title="{{ gettext("Medium") }}" data-placement="top">
+          <a href="https://blog.originprotocol.com" target="_blank" rel="noopener noreferrer" data-toggle="tooltip" title="{{ gettext("Blog") }}" data-placement="top">
             <i class="fab fa-medium-m"></i>
           </a>
           <a href="https://youtube.com/c/originprotocol" target="_blank" rel="noopener noreferrer" data-toggle="tooltip" title="{{ gettext("Youtube") }}" data-placement="top">
