handle no drops case

--- a/static/css/pages/nft.css
+++ b/static/css/pages/nft.css
@@ -14,8 +14,15 @@
   margin-top: 1rem;
   color: #fafbfc;
   font-size: 28px;
-  font-weight: normal;
+  font-weight: bold;
   margin-bottom: 40px;
+}
+
+.nft-page .upcoming-drops-section h2{
+  margin-top: 1rem;
+  color: #fafbfc;
+  font-size: 18px;
+  font-weight: normal;
 }
 
 /* .nft-page .tokens-section h1 {
