--- a/templates/nft.html
+++ b/templates/nft.html
@@ -14,67 +14,48 @@
   <section class="upcoming-drops-section">
     <h1>{{gettext("Upcoming Drops")}}</h1>
     <div class="row">
-      <div class="col-6 d-flex flex-column">
-        {% with 
-          upcoming=true, 
-          title=drops[0][0].title, 
-          subtitle=drops[0][0].subtitle, 
-          time=drops[0][0].countdown,
-          image=drops[0][0].image
-        %} 
-        {% include 'components/nft-card.html' %} 
-        {% endwith %}      
+    {% if drops[0] %}
+      {% for upcomingDrop in drops[0] %}
+        <div class="col-6 d-flex flex-column">
+          {% with 
+            upcoming=true, 
+            title=upcomingDrop.title, 
+            subtitle=upcomingDrop.subtitle, 
+            time=upcomingDrop.countdown,
+            image=upcomingDrop.image
+          %} 
+          {% include 'components/nft-card.html' %} 
+          {% endwith %}      
+        </div>
+      {% endfor %}
       </div>
-      <div class="col-6 d-flex flex-column">
-        {% with 
-          upcoming=true, 
-          title="Mike Dean X Shepard Fairey", 
-          subtitle="NFT Collection", 
-          time="yesterday",
-          image="https://nft.obey422.com/assets/lg/auction-image.png"
-        %} 
-        {% include 'components/nft-card.html' %} 
-        {% endwith %}      
-      </div>
+      {% else %} 
+      <h2>{{gettext("No Drops Scheduled")}}</h2>
+      {% endif %}
     </div>
   </section>
   <section class="upcoming-drops-section">
     <h1>{{gettext("Past Drops")}}</h1>
     <div class="row">
-      <div class="col-4 d-flex flex-column">
-        {% with 
-          upcoming=false, 
-          title="Mike Dean X Shepard Fairey", 
-          subtitle="NFT Collection", 
-          time="yesterday",
-          image="https://nft.obey422.com/assets/lg/auction-image.png"
-        %} 
-        {% include 'components/nft-card.html' %} 
-        {% endwith %}
+      {% if drops[1] %}
+        {% for pastDrop in drops[1] %}
+          <div class="col-4 d-flex flex-column">
+            {% with 
+              upcoming=false, 
+              title=pastDrop.title, 
+              subtitle=pastDrop.subtitle, 
+              time=pastDrop.countdown,
+              image=pastDrop.image
+            %} 
+            {% include 'components/nft-card.html' %} 
+            {% endwith %}      
+          </div>
+        {% endfor %}
+        </div>
+        {% else %} 
+        <h2>{{gettext("No Past Drops")}}</h2>
+        {% endif %}
       </div>
-      <div class="col-4 d-flex flex-column">
-        {% with 
-          upcoming=false, 
-          title="Micro", 
-          subtitle="Micro e-bike NFT Collection", 
-          time="yesterday",
-          image="https://nft.micro.com/assets/lg/auction-image.png"
-        %} 
-        {% include 'components/nft-card.html' %} 
-        {% endwith %}
-      </div>
-      <div class="col-4 d-flex flex-column">
-        {% with 
-          upcoming=false, 
-          title="Dude With Sign", 
-          subtitle="NFT Collection", 
-          time="yesterday",
-          image="https://wtf.dudewithsign.com/assets/lg/collection.png"
-        %} 
-        {% include 'components/nft-card.html' %} 
-        {% endwith %}
-      </div>
-    </div>
     <div class="d-flex justify-content-center align-items-center">
     <a class="mt-6 btn btn-primary d-flex justify-content-center align-items-center" href="https://ousd.com" target="_blank" rel="noreferrer noopener">
       {{gettext("View More")}}</a>
