--- a/templates/nft.html
+++ b/templates/nft.html
@@ -57,7 +57,7 @@
         {% endif %}
       </div>
     <div class="d-flex justify-content-center align-items-center">
-    <a class="mt-6 btn btn-primary d-flex justify-content-center align-items-center" href="https://ousd.com" target="_blank" rel="noreferrer noopener">
+    <a class="mt-6 btn btn-primary d-flex justify-content-center align-items-center" href="/nft?allPast=true">
       {{gettext("View More")}}</a>
     </div>div>  
   </section>
