--- a/templates/components/drops.html
+++ b/templates/components/drops.html
@@ -46,7 +46,7 @@
       </div>
     <div class="d-flex justify-content-center align-items-center">
       {% if drops[2] == 'true' %}  
-      <a class="mt-6 mb-4 btn btn-primary d-flex justify-content-center align-items-center" href="/en/?allPast=false">
+      <a class="mt-6 mb-4 btn btn-primary d-flex justify-content-center align-items-center" href="/en">
         {{gettext("View Less")}}
       </a>
       {% else %} 
