--- a/static/css/components/drop.css
+++ b/static/css/components/drop.css
@@ -13,8 +13,10 @@
 .nft-page .upcoming-drops-section h1{
   margin-top: 1rem;
   color: #fafbfc;
-  font-size: 28px;
-  font-weight: bold;
+  font-size: 1.9rem;
+  font-weight: normal;
+  font-family: Poppins;
+  line-height: normal;
   margin-bottom: 40px;
 }
 
