--- a/static/css/components/drop-card.css
+++ b/static/css/components/drop-card.css
@@ -1,6 +1,6 @@
 .nft-card {
     background-color: #061d2a;
-    margin: 20px;
+    margin-bottom: 2rem;
   }
 
 .nft-card img {
@@ -8,23 +8,23 @@
 } 
 
 .nft-card .title{
-    margin-top: 2px;
+    margin-top: .25rem;
     color: #fafbfc;
-    font-size: 20px;
+    font-size: 1rem;
     font-weight: bold;
   }
 
 .nft-card .subtitle {
-    margin-top: 2px;
+    margin-top: .25rem;
     color: #fafbfc;
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: normal;
 }
 
 .nft-card .time {
-    margin-top: 2px;
+    margin-top: .25rem;
     color: #fafbfc;
-    font-size: 20px;
+    font-size: 1rem;
     font-weight: normal;
     text-align: right;
 }
