--- a/static/css/components/drop.css
+++ b/static/css/components/drop.css
@@ -4,8 +4,8 @@
 
 .nft-page .upcoming-drops-section {
   background-color: #061d2a;
-  padding-left: 18.75rem;
-  padding-right: 18.75rem;
+  padding-left: 5rem;
+  padding-right: 5rem;
   padding-top: 65px;
   margin-bottom: 134;
 }
@@ -23,704 +23,10 @@
 .nft-page .upcoming-drops-section h2{
   margin-top: 1rem;
   color: #fafbfc;
-  font-size: 18px;
-  font-weight: normal;
-}
-
-/* .nft-page .tokens-section h1 {
-  margin-bottom: 1rem;
-} */
-.nft-page .hero-image-holder img {
-  max-width: 90%;
-}
-
-.buy-sell-block-1 .bottom img {
-  margin: 10px;
-  max-height: 30px;
-  margin-top: 24px;
-}
-
-.buy-sell-block-1 .bottom {
-  margin-bottom: 80px;
-}
-
-.buy-sell-block-1 .bottom img.big {
-  max-height: 38px;
-}
-
-.buy-sell-block-1 .btn-primary {
-  min-height: 52px;
-}
-
-.nft-launchpad {
-  background-color: #fafbfc;
-}
-.nft-launchpad .nft-benefits {
-  max-width: 900px;
-}
-.nft-launchpad .nft-benefits h4 {
-  font-weight: bold;
-  font-size:16px;
-  padding:0;
-}
-
-
-.dshop-section {
-  background-color: #fafbfc;
-}
-
-.dshop-section .bottom {
-  margin-bottom: 53px;
-}
-
-.buy-sell-block-1 {
-  background-color: white;
-  color: #061d2a;
-  font-weight: normal;
-}
-
-.buy-sell-block-1 .segment-subtitle {
-  font-family: Lato;
-  font-size: 0.875rem;
-  text-align: center;
-  max-width: 320px;
-  margin-top: -10px;
-}
-
-.buy-sell-block-1 .marketplace {
-  margin-top: 50px;
-  text-align: center;
-}
-
-.buy-sell-block-1 .marketplace .title {
-  font-size: 1.5rem;
-  text-align: center;
-}
-
-.buy-sell-block-1 .marketplace .text {
-  font-family: Lato;
-  line-height: 1.39;
-  max-width: 340px;
-  font-size: 0.875rem;
-}
-
-.vc-backed .button,
-.buy-sell-block-1 .marketplace .button {
-  font-size: 1.125rem;
-  max-width: 350px;
-  width: 100%;
-  border-radius: 26px;
-  border: solid 1px var(--white);
-  padding: 12px 0;
-  color: white;
-  background-color: transparent;
-  text-align: center;
-}
-
-.buy-sell-block-1 .marketplace .button:hover {
-  background-color: #036ddd;
-  cursor: pointer;
-}
-
-.buy-sell-block-1 .opaque {
-  opacity: 0.7;
-}
-
-/* .nft-page .tokens-section .subtitle {
-  text-align: center;
-  margin-bottom: 3.125rem;
-  font-size: 1.125rem;
-  font-weight: normal;
-} */
-
-.nft-page .action-buttons {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  margin-bottom: 6.25rem;
-}
-
-.nft-page .userflow-section .userflow-step {
-  display: flex;
-  flex-direction: row;
-  padding: 1.25rem 0;
-}
-
-.nft-page .userflow-section .flow-desc {
-  font-size: 1.125rem;
-  text-align: left;
-  color: #fff;
-  flex: 1;
-  padding-left: 1.875rem;
-  font-weight: normal;
-}
-
-.nft-page .userflow-section .flow-step {
-  border-radius: 50%;
-  border: 1px solid #fff;
-  color: #fff;
-  text-align: center;
-  display: inline-block;
-  width: 3.75rem;
-  height: 3.75rem;
-  line-height: 3.75rem;
-  margin: 0;
-  flex: 3.75rem 0 0;
-  font-size: 2.25rem;
-  text-align: center;
-}
-
-.nft-page .userflow-section .col-12:last-child {
-  margin-bottom: 5.875rem;
-}
-
-.nft-page .userflow-section .col-12 > img {
-  margin-bottom: 2rem;
-  max-width: 100%;
-  margin-left: auto;
-}
-
-.nft-page .features-section .product-feature {
-  display: flex;
-  flex-direction: row;
-  margin: 1.656rem 0;
-  padding-bottom: 0px;
-}
-
-.nft-page .product-feature  {
-  padding-bottom: 5.875rem;
-}
-
-.nft-page .product-feature .feature-image {
-  flex: auto 0 0;
-  margin-right: 1.5rem
-}
-
-.nft-page .product-feature .feature-content {
-  flex: 1;
-  font-size: 1.125rem;
-  text-align: left;
-  margin-bottom: 1rem;
-}
-
-.nft-page .product-feature .feature-content h4 {
-  color: #000;
-  margin-bottom: 1rem;
-  text-align: left;
-}
-
-.nft-page .marketplaces-section {
-  color: white;
-}
-
-.nft-page .marketplaces-section .btn {
-  background-color: #061d2a;
-  color: white;
-}
-
-.nft-page .marketplaces-section .btn:hover {
-  background-color: #162d3a;
-}
-
-
-.nft-page .marketplaces-section img {
-  display: block;
-  margin: 0 auto;
-  max-width: 100%;
-  margin-bottom: 1rem;
-}
-
-.nft-page .marketplaces-section h3 {
-  display: block;
-  text-align: center;
-  margin-bottom: 2.5rem;
-  font-family: Lato;
-  font-size: 18px;
-  font-weight: normal;
-  color: white;
-}
-
-.nft-page .features-section h3 {
-  font-family: Poppins;
-  font-size: 1.375rem;
-  font-weight: normal;
-  color: #061d2a;
-  text-align: left;
-  margin-bottom: 10px;
-}
-
-.nft-page .feature-desc {
-  font-family: Lato;
-  font-size: 1.125rem;
-  font-weight: normal;
-  line-height: 1.39;
-  color: #345d7a;
-}
-
-.nft-page .dshop-section .bottom img {
-  margin-left: 30px;
-  margin-right: 30px;
-}
-
-.nft-page .dshop-section h1 {
-  margin-bottom: 20px;
-}
-
-.nft-page .od-section .btn,
-.nft-page .dshop-section .btn {
-  border-radius: 26px;
-  background-color: #061d2a;
-  margin-bottom: 80px;
-  height: 52px;
-  min-width: 250px;
-  width: auto;
-}
-
-.nft-page .od-section .btn:hover,
-.nft-page .dshop-section .btn:hover {
-  background-color: #162d3a;
-}
-
-.nft-page .dshop-section .sub-title {
-  max-width: 850px;
-  opacity: 0.8;
-  font-family: Lato;
-  font-size: 18px;
-  font-weight: normal;
-  text-align: center;
-  color: #061d2a;
-  margin-bottom: 30px;
-}
-
-.nft-page .dshop-section .sub-title-footer {
-  margin-bottom: 80px;
-  font-family: Lato;
-  font-size: 14px;
-  color: #061d2a;
-  font-weight: normal;
-}
-
-.nft-page .od-section h1 {
-  margin-bottom: 20px;
-}
-
-.nft-page .od-section .sub-title {
-  max-width: 850px;
-  opacity: 0.8;
-  font-family: Lato;
-  font-size: 18px;
-  font-weight: normal;
-  text-align: center;
-  color: white;
-  margin-bottom: 47px;
-}
-
-.nft-page .checked-items .checked-item {
-  margin-left: 14px;
-  margin-right: 14px;
-  margin-bottom: 8px;
-  font-family: Lato;
-  font-size: 18px;
-  color: #061d2a;
-  opacity: 0.8;
-  font-weight: normal;
-}
-
-.nft-page .checked-items {
-  margin-bottom: 60px;
-}
-
-.nft-page .marketplaces-section .btn {
-  margin-bottom: 3.825rem;
-}
-
-.nft-page .marketplaces-section .marketplace-images {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  object-fit: contain;
-  padding-bottom: 5.875rem;
-}
-
-.nft-page .marketplaces-section .marketplace-images img {
-  margin: auto 2.375rem
-}
-
-.nft-page .product-title-section .row,
-.nft-page .product-title-section .container {
-  height: 100%;
-}
-
-.nft-page .product-title-section h1 {
-  text-align: left;
-}
-
-.milestones-timeline {
-  max-width: 680px;
-  margin: 3rem auto 5rem auto;
-}
-
-.milestones-timeline .milestone {
-  width: 50%;
-  margin-right: auto;
-  position: relative;
-  text-align: center;
-  padding: 0 4.5rem 0 0;
-}
-
-.milestones-timeline .milestone:nth-child(even) {
-  margin-left: auto;
-  margin-right: 0;
-  padding: 0 0 0 4.5rem;
-}
-
-.milestones-timeline .milestone:before {
-  content: '';
-  position: absolute;
-  right: -3.5px;
-  top: calc(0.875rem - 3.5px);
-  display: inline-block;
-  width: 7px;
-  height: 7px;
-  background-color: #007cff;
-  border-radius: 50%;
-}
-
-.milestones-timeline .milestone:not(.completed):before {
-  background-color: #bdcbd5;
-}
-
-.milestones-timeline .milestone:not(:last-child):after {
-  content: '';
-  position: absolute;
-  right: -1.5px;
-  display: inline-block;
-  width: 3px;
-  background-color: #007cff;
-  top: calc(0.875rem - 3.5px);
-  bottom: calc(-0.875rem + 3.5px);
-  z-index: -1;
-}
-
-.milestones-timeline .milestone:not(.completed):after,
-.milestones-timeline .milestone.recent:after {
-  background-color: #bdcbd5;
-}
-
-.milestones-timeline .milestone:nth-child(even):before {
-  left: -3.5px;
-  right: unset;
-}
-
-.milestones-timeline .milestone:nth-child(even):after {
-  left: -1.5px;
-  right: unset;
-}
-
-.milestones-timeline .milestone.completed.recent:after {
-  background-color: #00db8d;
-}
-
-.milestones-timeline .milestone.completed.recent + .milestone.future:before {
-  background-color: #00db8d;
-}
-
-.milestones-timeline .milestone .step {
-  background-color: #007cff;
-  border-radius: 50%;
-  width: 1.75rem;
-  height: 1.75rem;
-  line-height: 1.75rem;
   font-size: 1rem;
-  color: #fff;
-  font-weight: normal;
-  margin: 0 auto 1.25rem auto;
-}
-
-.milestones-timeline .milestone:not(.completed) .step {
-  background-color: #bdcbd5;
-}
-
-.milestones-timeline .milestone .step:after {
-  position: absolute;
-  right: 0;
-  height: 1px;
-  display: inline-block;
-  content: '';
-  background-color: #007cff;
-  top: 0.875rem;
-  left: calc(50% - 3rem);
-  z-index: -1;
-}
-
-.milestones-timeline .milestone:nth-child(even) .step:after {
-  left: 0;
-  right: calc(50% - 3rem);
-}
-
-.milestones-timeline .milestone:not(.completed) .step:after {
-  background-color: #bdcbd5;
-}
-
-.milestones-timeline .milestone.completed.recent + .milestone.future .step {
-  background-color: #00db8d;
-}
-
-.milestones-timeline .milestone.completed.recent + .milestone.future .timestamp {
-  color: #00db8d;
-}
-
-.milestones-timeline .milestone.completed.recent + .milestone.future .step:after {
-  background-color: #00db8d;
-}
-
-.milestones-timeline .milestone .timestamp {
-  font-size: 1.125rem;
-  color: #007cff;
   font-weight: normal;
 }
 
-.milestones-timeline .milestone:not(.completed) .timestamp {
-  color: #8fa7b7;
-}
-
-.milestones-timeline .milestone .title {
-  font-size: 1.125rem;
-  font-weight: normal;
-  color: #111d28;
-  line-height: 1.2;
-}
-
-.milestones-timeline .milestone .title > span:not(:last-child) {
-  display: block;
-  margin-bottom: 0.7rem;
-}
-
-.nft-page .btn {
-  width: 310px
-}
-
-.nowrap {
-  white-space: nowrap;
-}
-
-.ext-availability img {
-  height: 25px;
-  width: 25px;
-  margin: 0 0 2rem 10px;
-  object-fit: contain;
-}
-
-.white-section h3 {
-  font-size: 1.5rem;
-  text-align: center;
-  margin-bottom: 2rem;
-  font-weight: normal;
-  color: #061d2a;
-}
-
-.nft-page .origin-dollar h1 {
-  color: #fff;
-  font-size: 2rem;
-  margin-bottom: 2.25rem;
-}
-
-.nft-page .origin-dollar .segment-subtitle {
-  color: #fff;
-  font-size: 1.125rem;
-  margin-bottom: 3rem;
-}
-
-.nft-page .origin-dollar a {
-  height: 52px;
-}
-
-.nft-page .origin-dollar .prod-image {
-  margin-bottom: 3rem;
-  max-width: 100%;
-}
-
-/* sm + */
-@media (min-width: 576px) {
-
-  .buy-sell-block-1 .marketplace {
-    margin-top: 76px;
-    text-align: left;
-  }
-
-  .buy-sell-block-1 .marketplace .title {
-    text-align: left;
-    font-family: 'Poppins';
-    font-weight: 500;
-  }
-
-  .buy-sell-block-1 .marketplace .text {
-    max-width: auto;
-    font-size: 1.125rem;
-  }
-
-  .buy-sell-block-1 .marketplace .button {
-    max-width: 600px;
-  }
-
-  .buy-sell-block-1 .segment-subtitle {
-    font-size: 1.125rem;
-    max-width: 680px;
-    margin-top: -15px;
-  }
-}
-
-/* md + */
-@media (min-width: 768px) {
-  .video-block .bottom img,
-  .buy-sell-block-1 .bottom img,
-  .vc-backed .bottom img {
-    margin: 21px;
-    max-height: 33px;
-  }
-
-  .buy-sell-block-1 .bottom img.big {
-    max-height: 43px;
-  }
-
-  .buy-sell-block-1 .segment-subtitle {
-    font-size: 1.125rem;
-    max-width: 680px;
-    margin-top: -15px;
-  }
-}
-
-/* lg + */
-@media (min-width: 992px) {
-  .video-block .bottom img,
-  .buy-sell-block-1 .bottom img,
-  .vc-backed .bottom img {
-    margin: 30px;
-    max-height: 30px;
-  }
-
-  .buy-sell-block-1 .bottom img.big {
-    max-height: 41px;
-  }
-}
-
-@media (max-width: 992px) {
-  .nft-page .product-title-section h1 {
-    max-width: 720px;
-    margin-top: 100px;
-    margin-left: 0px;
-    padding-left: 15px;
-  }
-}
-
-@media (max-width: 767px) {
-  .nft-page .userflow-section .col-12 > img {
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .nft-page .product-title-section h1 {
-    max-width: 520px;
-    margin-top: 100px;
-    margin-left: 0px;
-    padding-left: 50px;
-  }
-  
-  .buy-sell-block-1 .prod-image,
-  .od-section .od-image,
-  .od-ext-section .od-ext-image {
-    max-width: 100%;
-    width: 100%;
-  }
-} 
-
-@media (max-width: 575px) {
-  .nft-page .marketplaces-section .marketplace-images {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .nft-page .marketplaces-section .marketplace-images img {
-    margin: 1.5rem 0;
-    max-width: 200px;
-  }
-
-  .nft-page .userflow-section .userflow-step {
-    margin-bottom: 1rem;
-  }
-
-  .milestones-timeline .milestone {
-    padding: 0 1.5rem 0 0;
-  }
-  
-  .milestones-timeline .milestone:nth-child(even) {
-    padding: 0 0 0 1.5rem;
-  }
-
-  .milestones-timeline .milestone .step:after {
-    left: calc(50% - 1.5rem);
-  }
-  
-  .milestones-timeline .milestone:nth-child(even) .step:after {
-    right: calc(50% - 1.5rem);
-  }
-
-  .nft-page .product-title-section h1 {
-    margin-top: 100px;
-    margin-left: 0px;
-    padding-left: 17px;
-    max-width: 400px;
-    text-align: left; 
-  }
-
-  .nft-page .marketplaces-section .btn {
-    margin-bottom: 3.825rem;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .nft-page .dshop-image {
-    max-width: 100%;
-  }
-
-  .milestones-timeline .milestone .title {
-    font-size: 1rem;
-  }
-
-  .nft-page .dshop-section .btn {
-    margin-bottom: 50px;
-  }
-
-  .nft-page .origin-dollar .btn {
-    width: 100%;
-    max-width: 310px;
-  }
-
-  .nft-page .dshop-section .bottom img.swag {
-    margin-left: 30px;
-  }
-
-  .btn.btn-dark.btn-inverse {
-    width: 100%;
-    max-width: 100%;
-  }
-
-  .nft-page .od-section .btn, 
-  .nft-page .od-ext-section .btn {
-    width: 100% !important;
-    max-width: 100% !important;
-  }
-
-  .samsung-blockchain {
-    width: 250px;
-  }
-}
-
-@media (max-width: 400px) {
-
-  .nft-page .product-title-section h1 {
-    margin-top: 100px;
-    margin-left: 0px;
-    padding-left: 16px;
-  }
+.nft-page .upcoming-drops-section .drop-card {
+  margin: auto;
 }
