--- a/templates/components/drops.html
+++ b/templates/components/drops.html
@@ -1,45 +1,56 @@
 <main class="nft-page">
   <section class="upcoming-drops-section">
-    <h1>{{gettext("Upcoming Drops")}}</h1>
-    <div class="row">
-    {% if drops[0] %}
-      {% for upcomingDrop in drops[0] %}
-        <div class="col-6 d-flex flex-column">
-          {% with 
-            drop_url=upcomingDrop.url,
-            title=upcomingDrop.title, 
-            subtitle=upcomingDrop.subtitle, 
-            time=upcomingDrop.countdown,
-            image=upcomingDrop.image
-          %} 
-          {% include 'components/drop-card.html' %} 
-          {% endwith %}      
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <h1>{{gettext("Upcoming Drops")}}</h1>
         </div>
-      {% endfor %}
       </div>
-      {% else %} 
-      <h2>{{gettext("No Drops Scheduled")}}</h2>
-      {% endif %}
-    </div>
-  </section>
-  <section class="upcoming-drops-section">
-    <h1>{{gettext("Past Drops")}}</h1>
-    <div class="row">
-      {% if drops[1] %}
-        {% for pastDrop in drops[1] %}
-          <div class="col-4 d-flex flex-column">
+      <div class="row">
+      {% if drops[0] %}
+        {% for upcomingDrop in drops[0] %}
+          <div class="drop-card col-12 col-md-6">
             {% with 
-              drop_url=pastDrop.url,
-              title=pastDrop.title, 
-              subtitle=pastDrop.subtitle, 
-              time=pastDrop.countdown,
-              image=pastDrop.image
+              drop_url=upcomingDrop.url,
+              title=upcomingDrop.title, 
+              subtitle=upcomingDrop.subtitle, 
+              time=upcomingDrop.countdown,
+              image=upcomingDrop.image
             %} 
-            {% include 'components/past-drop-card.html' %} 
+            {% include 'components/drop-card.html' %} 
             {% endwith %}      
           </div>
         {% endfor %}
         </div>
+      </div>
+      {% else %} 
+      <h2>{{gettext("No Drops Scheduled")}}</h2>
+      {% endif %}
+  </section>
+  <section class="upcoming-drops-section">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <h1>{{gettext("Past Drops")}}</h1>
+        </div>
+      </div>
+      <div class="row">
+        {% if drops[1] %}
+          {% for pastDrop in drops[1] %}
+            <div class="drop-card col-12 col-md-4">
+              {% with 
+                drop_url=pastDrop.url,
+                title=pastDrop.title, 
+                subtitle=pastDrop.subtitle, 
+                time=pastDrop.countdown,
+                image=pastDrop.image
+              %} 
+              {% include 'components/past-drop-card.html' %} 
+              {% endwith %}      
+            </div>
+          {% endfor %}
+        </div> 
+      </div>
         {% else %} 
         <h2>{{gettext("No Past Drops")}}</h2>
         {% endif %}
@@ -54,6 +65,6 @@
         {{gettext("View More")}}
       </a>
       {% endif %} 
-    </div>div>  
+    </div> 
   </section>
 </main>
