Widen cards on small screens and clean up CSS

--- a/static/css/components/drop.css
+++ b/static/css/components/drop.css
@@ -2,15 +2,15 @@
   background-color: #007cff;
 }
 
-.nft-page .upcoming-drops-section {
+.nft-page .drops-section {
   background-color: #061d2a;
-  padding-left: 5rem;
-  padding-right: 5rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
   padding-top: 65px;
   margin-bottom: 134;
 }
 
-.nft-page .upcoming-drops-section h1{
+.nft-page .drops-section h1{
   margin-top: 1rem;
   color: #fafbfc;
   font-size: 1.9rem;
@@ -20,13 +20,13 @@
   margin-bottom: 40px;
 }
 
-.nft-page .upcoming-drops-section h2{
+.nft-page .drops-section h2{
   margin-top: 1rem;
   color: #fafbfc;
   font-size: 1rem;
   font-weight: normal;
 }
 
-.nft-page .upcoming-drops-section .drop-card {
+.nft-page .drops-section .drop-card {
   margin: auto;
 }
