--- a/templates/components/drops.html
+++ b/templates/components/drops.html
@@ -1,5 +1,5 @@
 <main class="nft-page">
-  <section class="upcoming-drops-section">
+  <section class="drops-section">
     <div class="container">
       <div class="row">
         <div class="col-12">
@@ -27,7 +27,7 @@
       <h2>{{gettext("No Drops Scheduled")}}</h2>
       {% endif %}
   </section>
-  <section class="upcoming-drops-section">
+  <section class="drops-section">
     <div class="container">
       <div class="row">
         <div class="col-12">
