--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -165,10 +165,19 @@
               <a class="wallet-link" href="https://etherscan.io/address/{{ogn_stats.foundation_reserve_address}}" target="_blank" rel="noopener noreferrer">
                 <div class="wallet-address d-none">{{ogn_stats.foundation_reserve_address}}</div>
                 <div class="wallet-address d-md-none">{{ogn_stats.foundation_reserve_address[:6]}}...{{ogn_stats.foundation_reserve_address[-4:]}}</div>
-                <div class="wallet-address d-none d-md-flex">{{ogn_stats.foundation_reserve_address[:11]}}...{{ogn_stats.foundation_reserve_address[-8:]}}</div>
+                <div class="wallet-address d-none d-md-flex">{{ogn_stats.foundation_reserve_address}}</div>
               </a>
               <div class="wallet-balance">{{ogn_stats.foundation_reserve_balance_formatted}} OGN</div>
-              <div class="placeholder">&nbsp;</div>
+            </div>
+
+            <div class="reserved-wallet">
+              <div class="wallet-name">{{gettext("New Foundation Reserves")}}</div>
+              <a class="wallet-link" href="https://etherscan.io/address/{{ogn_stats.new_foundation_reserve_address}}" target="_blank" rel="noopener noreferrer">
+                <div class="wallet-address d-none">{{ogn_stats.new_foundation_reserve_address}}</div>
+                <div class="wallet-address d-md-none">{{ogn_stats.new_foundation_reserve_address[:6]}}...{{ogn_stats.new_foundation_reserve_address[-4:]}}</div>
+                <div class="wallet-address d-none d-md-flex">{{ogn_stats.new_foundation_reserve_address}}</div>
+              </a>
+              <div class="wallet-balance">{{ogn_stats.new_foundation_reserve_balance_formatted}} OGN</div>
             </div>
 
             <div class="reserved-wallet">
@@ -176,10 +185,9 @@
               <a class="wallet-link" href="https://etherscan.io/address/{{ogn_stats.team_dist_address}}" target="_blank" rel="noopener noreferrer">
                 <div class="wallet-address d-none">{{ogn_stats.team_dist_address}}</div>
                 <div class="wallet-address d-md-none">{{ogn_stats.team_dist_address[:6]}}...{{ogn_stats.team_dist_address[-4:]}}</div>
-                <div class="wallet-address d-none d-md-flex">{{ogn_stats.team_dist_address[:11]}}...{{ogn_stats.team_dist_address[-8:]}}</div>
+                <div class="wallet-address d-none d-md-flex">{{ogn_stats.team_dist_address}}</div>
               </a>
               <div class="wallet-balance">{{ogn_stats.team_dist_balance_formatted}} OGN</div>
-              <div class="placeholder">&nbsp;</div>
             </div>
 
             <div class="reserved-wallet">
@@ -187,10 +195,9 @@
               <a class="wallet-link" href="https://etherscan.io/address/{{ogn_stats.investor_dist_address}}" target="_blank" rel="noopener noreferrer">
                 <div class="wallet-address d-none">{{ogn_stats.investor_dist_address}}</div>
                 <div class="wallet-address d-md-none">{{ogn_stats.investor_dist_address[:6]}}...{{ogn_stats.investor_dist_address[-4:]}}</div>
-                <div class="wallet-address d-none d-md-flex">{{ogn_stats.investor_dist_address[:11]}}...{{ogn_stats.investor_dist_address[-8:]}}</div>
+                <div class="wallet-address d-none d-md-flex">{{ogn_stats.investor_dist_address}}</div>
               </a>
               <div class="wallet-balance">{{ogn_stats.investor_dist_balance_formatted}} OGN</div>
-              <div class="placeholder">&nbsp;</div>
             </div>
 
             <div class="reserved-wallet">
@@ -198,10 +205,19 @@
               <a class="wallet-link" href="https://etherscan.io/address/{{ogn_stats.dist_staging_address}}" target="_blank" rel="noopener noreferrer">
                 <div class="wallet-address d-none">{{ogn_stats.dist_staging_address}}</div>
                 <div class="wallet-address d-md-none">{{ogn_stats.dist_staging_address[:6]}}...{{ogn_stats.dist_staging_address[-4:]}}</div>
-                <div class="wallet-address d-none d-md-flex">{{ogn_stats.dist_staging_address[:11]}}...{{ogn_stats.dist_staging_address[-8:]}}</div>
+                <div class="wallet-address d-none d-md-flex">{{ogn_stats.dist_staging_address}}</div>
               </a>
               <div class="wallet-balance">{{ogn_stats.dist_staging_balance_formatted}} OGN</div>
-              <div class="placeholder">&nbsp;</div>
+            </div>
+
+            <div class="reserved-wallet">
+              <div class="wallet-name">{{gettext("New Distribution Staging")}}</div>
+              <a class="wallet-link" href="https://etherscan.io/address/{{ogn_stats.new_dist_staging_address}}" target="_blank" rel="noopener noreferrer">
+                <div class="wallet-address d-none">{{ogn_stats.new_dist_staging_address}}</div>
+                <div class="wallet-address d-md-none">{{ogn_stats.new_dist_staging_address[:6]}}...{{ogn_stats.new_dist_staging_address[-4:]}}</div>
+                <div class="wallet-address d-none d-md-flex">{{ogn_stats.new_dist_staging_address}}</div>
+              </a>
+              <div class="wallet-balance">{{ogn_stats.new_dist_staging_balance_formatted}} OGN</div>
             </div>
 
             <div class="reserved-wallet">
@@ -209,10 +225,9 @@
               <a class="wallet-link" href="https://etherscan.io/address/{{ogn_stats.partnerships_address}}" target="_blank" rel="noopener noreferrer">
                 <div class="wallet-address d-none">{{ogn_stats.partnerships_address}}</div>
                 <div class="wallet-address d-md-none">{{ogn_stats.partnerships_address[:6]}}...{{ogn_stats.partnerships_address[-4:]}}</div>
-                <div class="wallet-address d-none d-md-flex">{{ogn_stats.partnerships_address[:11]}}...{{ogn_stats.partnerships_address[-8:]}}</div>
+                <div class="wallet-address d-none d-md-flex">{{ogn_stats.partnerships_address}}</div>
               </a>
               <div class="wallet-balance">{{ogn_stats.partnerships_balance_formatted}} OGN</div>
-              <div class="placeholder">&nbsp;</div>
             </div>
 
             <div class="reserved-wallet">
@@ -220,10 +235,9 @@
               <a class="wallet-link" href="https://etherscan.io/address/{{ogn_stats.ecosystem_growth_address}}" target="_blank" rel="noopener noreferrer">
                 <div class="wallet-address d-none">{{ogn_stats.ecosystem_growth_address}}</div>
                 <div class="wallet-address d-md-none">{{ogn_stats.ecosystem_growth_address[:6]}}...{{ogn_stats.ecosystem_growth_address[-4:]}}</div>
-                <div class="wallet-address d-none d-md-flex">{{ogn_stats.ecosystem_growth_address[:11]}}...{{ogn_stats.ecosystem_growth_address[-8:]}}</div>
+                <div class="wallet-address d-none d-md-flex">{{ogn_stats.ecosystem_growth_address}}</div>
               </a>
               <div class="wallet-balance">{{ogn_stats.ecosystem_growth_balance_formatted}} OGN</div>
-              <div class="placeholder">&nbsp;</div>
             </div>
 
           </div>
