--- a/templates/components/drops.html
+++ b/templates/components/drops.html
@@ -55,7 +55,8 @@
         <h2>{{gettext("No Past Drops")}}</h2>
         {% endif %}
       </div>
-    <div class="d-flex justify-content-center align-items-center">
+<!-- skip filtering for now -->
+<!--     <div class="d-flex justify-content-center align-items-center">
       {% if drops[2] == 'true' %}  
       <a class="mt-6 mb-6 btn btn-primary d-flex justify-content-center align-items-center" href="/en">
         {{gettext("View Less")}}
@@ -65,6 +66,6 @@
         {{gettext("View More")}}
       </a>
       {% endif %} 
-    </div> 
+    </div>  -->
   </section>
 </main>
