Repair padding below past drops

--- a/static/css/components/drop.css
+++ b/static/css/components/drop.css
@@ -7,10 +7,13 @@
   padding-left: 2rem;
   padding-right: 2rem;
   padding-top: 65px;
-  margin-bottom: 134;
 }
 
-.nft-page .drops-section h1{
+.nft-page .drops-section:last-of-type {
+  padding-bottom: 65px;
+}
+
+.nft-page .drops-section h1 {
   margin-top: 1rem;
   color: #fafbfc;
   font-size: 1.9rem;
@@ -20,7 +23,7 @@
   margin-bottom: 40px;
 }
 
-.nft-page .drops-section h2{
+.nft-page .drops-section h2 {
   margin-top: 1rem;
   color: #fafbfc;
   font-size: 1rem;
