--- a/templates/components/drops.html
+++ b/templates/components/drops.html
@@ -58,11 +58,11 @@
 <!-- skip filtering for now -->
 <!--     <div class="d-flex justify-content-center align-items-center">
       {% if drops[2] == 'true' %}  
-      <a class="mt-6 mb-6 btn btn-primary d-flex justify-content-center align-items-center" href="/en">
+      <a class="mt-6 btn btn-primary d-flex justify-content-center align-items-center" href="/en">
         {{gettext("View Less")}}
       </a>
       {% else %}
-      <a class="mt-6 mb-6 btn btn-primary d-flex justify-content-center align-items-center" href="/en/?allPast=true">
+      <a class="mt-6 btn btn-primary d-flex justify-content-center align-items-center" href="/en/?allPast=true">
         {{gettext("View More")}}
       </a>
       {% endif %} 
