--- a/templates/landing.html
+++ b/templates/landing.html
@@ -62,7 +62,7 @@
   <!-- origin-marketplace-0.23.16.apk -->
   <div class="buy-sell-block d-flex flex-column justify-content-between align-items-center px-3 px-md-0">
     <h1>{{gettext("Where top creators launch their NFTs")}}</h1>
-    <div class="segment-subtitle mx-3">{{gettext("Origin has hosted record-breaking NFT sales for top musicans, celebrities and creators. Sell NFTs on your own website, not someone else's marketplace.")}}</div>
+    <div class="segment-subtitle mx-3">{{gettext("Origin has hosted record-breaking NFT sales for top musicians, celebrities and creators. Sell NFTs on your own website, not someone else's marketplace.")}}</div>
     <a class="mb-5 mt-5 btn btn-dark d-flex justify-content-center align-items-center" href="https://share.hsforms.com/1y9oMr3DSRg-QSnfPoaYY0Qbye5b">
       {{gettext("Interested in running an NFT sale?")}}</a>
 
