localized date fix

--- a/templates/components/drops.html
+++ b/templates/components/drops.html
@@ -14,7 +14,7 @@
               drop_url=upcomingDrop.url,
               title=upcomingDrop.title, 
               subtitle=upcomingDrop.subtitle, 
-              time=upcomingDrop.countdown,
+              time=upcomingDrop.startDate,
               image=upcomingDrop.image
             %} 
             {% include 'components/drop-card.html' %} 
