add kraken to dashboard

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -394,6 +394,11 @@
             <img src="/static/img/ognToken/bilaxy.png" />
           </a>
         </div>
+        <div class="col-12 col-sm-6 col-md-2 token-exchange text-center">
+          <a target="_blank" rel="noopener noreferrer" href="https://trade.kraken.com/charts/KRAKEN:OGN-USD">
+            <img src="/static/img/ognToken/kraken.png" />
+          </a>
+        </div>
       </div>
     </div>
     <br><br>
